util: add helpers to define bitwise operators on enums for C++
Signed-off-by: Karol Herbst <kherbst@redhat.com>
Reviewed-by: Jason Ekstrand <jason@jlekstrand.net>

--- a/src/util/Makefile.sources
+++ b/src/util/Makefile.sources
@@ -20,6 +20,7 @@ MESA_UTIL_FILES := \
 	disk_cache.h \
 	double.c \
 	double.h \
+	enum_operators.h \
 	fast_idiv_by_const.c \
 	fast_idiv_by_const.h \
 	format/u_format.c \
