--- a/src/util/meson.build
+++ b/src/util/meson.build
@@ -43,6 +43,7 @@ files_mesa_util = files(
   'disk_cache.h',
   'double.c',
   'double.h',
+  'enum_operators.h',
   'fast_idiv_by_const.c',
   'fast_idiv_by_const.h',
   'format_r11g11b10f.h',
